chore: release v0.5.5 and add Trino GPU support